src/objects/Geocoding_Result__c.object
<CustomObject>
    <fields>
        <fullName>Confidence__c</fullName>
        <description>The confidence score returned from the geocoding service for this result</description>
        <inlineHelpText>The confidence score returned from the geocoding service for this result</inlineHelpText>
        <label>Confidence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Geocoding Results</relationshipLabel>
        <relationshipName>Geocoding_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geocoded_Address__c</fullName>
        <description>The address the geocoder used for this result</description>
        <inlineHelpText>The address the geocoder used for this result</inlineHelpText>
        <label>Geocoded Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geocoding_Service__c</fullName>
        <description>The name of the service that provided this result</description>
        <inlineHelpText>The name of the service that provided this result</inlineHelpText>
        <label>Geocoding Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Record__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; &amp; Related_Record_Id__c, Related_Record_Id__c)</formula>
        <label>Link to Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Related_Record_Id__c</fullName>
        <description>The Id of the record whose address was requested for geocoding</description>
        <inlineHelpText>The Id of the record whose address was requested for geocoding</inlineHelpText>
        <label>Related Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Address__c</fullName>
        <description>The address sent to the service for geocoding.</description>
        <inlineHelpText>The address sent to the service for geocoding</inlineHelpText>
        <label>Requested Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>The score that determines which result is the winning result. May match confidence score from the geocoding service, or be adjusted by our own algorithm if the confidence is inaccurate.</description>
        <inlineHelpText>The score that determines which result is the winning result. May match confidence score from the geocoding service, or be adjusted by our own algorithm if the confidence is inaccurate.</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scoring_Method__c</fullName>
        <description>Describes the calculation used to determine this score</description>
        <inlineHelpText>Describes the calculation used to determine this score</inlineHelpText>
        <label>Scoring Method</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <formula>TEXT(CreatedDate)</formula>
        <label>Timestamp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winning_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be checked if this is the result that was used to determine the record location</description>
        <inlineHelpText>This box will be checked if this is the result that was used to determine the record location</inlineHelpText>
        <label>Winning Result</label>
        <type>Checkbox</type>
    </fields>
    <label>Geocoding Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requested_Address__c</columns>
        <columns>Geocoded_Address__c</columns>
        <columns>Winning_Result__c</columns>
        <columns>Confidence__c</columns>
        <columns>Score__c</columns>
        <columns>Scoring_Method__c</columns>
        <columns>Link_to_Record__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GEO-{00000}</displayFormat>
        <label>Geocoding Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geocoding Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>